--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ python:
     - sleep 3
 install:
   - pip install -r requirements.txt
+  - pip install -r requirements_dev.txt
 script:
   - python manage.py test
