--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+services: mongodb
 branches:
   only:
     - master
@@ -6,7 +7,6 @@ python:
   - "2.7"
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -y mongodb
     # Start X for selenium tests.
     - "export DISPLAY=:99.0"
     - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
