Using versions major to

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Django==1.6.2
-Pillow==2.4.0
-argparse==1.2.1
-chardet==2.2.1
-pdfkit==0.4.1
-pymongo==2.6.3
-python-dateutil==2.2
-python-magic==0.4.6
-six==1.6.1
+Django>=1.6.2
+Pillow>=2.4.0
+argparse>=1.2.1
+chardet>=2.2.1
+pdfkit>=0.4.1
+pymongo>=2.6.3
+python-dateutil>=2.2
+python-magic>=0.4.6
+six>=1.6.1
