--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,11 @@ before_install:
 install:
   - pip install -r requirements.txt
   - pip install -r requirements_dev.txt
+  - pip install coveralls
 script:
   - python manage.py test
+after_success:
+  coveralls
 notifications:
   irc:
     channels: "irc.freenode.org#ghiro"
