--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - pip install -r requirements_dev.txt
   - pip install coveralls
 script:
-  - python manage.py test
+  - coverage run manage.py test
 after_success:
   coveralls
 notifications:
