--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - pip install -r requirements_dev.txt
   - pip install coveralls
 script:
-  - coverage run --source=ghiro manage.py test
+  - coverage run --source='.' manage.py test
 after_success:
   coveralls
 notifications:
