--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ Pillow>=2.4.0
 argparse>=1.2.1
 chardet>=2.2.1
 pdfkit>=0.4.1
-pymongo>=2.6.3
+pymongo==2.8
 python-dateutil>=2.2
 python-magic>=0.4.6
