Upgrade pip before install

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,15 @@ before_install:
     - sudo apt-get update -qq
     # Linear algebra (Scipy deps).
     - sudo apt-get install libblas-dev liblapack-dev
+
     # Start X for selenium tests.
     - "export DISPLAY=:99.0"
     - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
     - sleep 3
 install:
+  # Upgrade pip.
+  - pip install --upgrade pip
+  # Deps.
   - pip install -r requirements.txt
   - pip install -r requirements_dev.txt
   - pip install coveralls
