--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Django>=1.8
-Pillow>=2.4.0
+Django==1.9.6
+Pillow==3.2.0
 argparse>=1.2.1
-chardet>=2.2.1
-pdfkit>=0.4.1
-pymongo>=3
-python-dateutil>=2.2
-python-magic>=0.4.6
-requests>=2.7.0
+chardet==2.3.0
+pdfkit==0.5.0
+pymongo==3.2.2
+python-dateutil==2.5.3
+python-magic==0.4.11
+requests==2.10.0
 nudepy>=0.2
 imagehash
